--- a/FufuLauncher/Properties/launchsettings.json
+++ b/FufuLauncher/Properties/launchsettings.json
@@ -1,10 +1,7 @@
 ﻿{
-    "profiles": {
-      "FufuLauncher (Package)": {
-        "commandName": "MsixPackage"
-      },
-      "FufuLauncher (Unpackaged)": {
-        "commandName": "Project"
-      }
+  "profiles": {
+    "FufuLauncher": {
+      "commandName": "Project"
     }
+  }
 }
