--- a/FufuLauncher/FufuLauncher.csproj
+++ b/FufuLauncher/FufuLauncher.csproj
@@ -11,17 +11,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <UseWinUI>true</UseWinUI>
-        <EnableMsixTooling>true</EnableMsixTooling>
+        <DefineConstants>$(DefineConstants);DISABLE_XAML_GENERATED_MAIN</DefineConstants>
+
+        <WindowsPackageType>None</WindowsPackageType>
+
         <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
-        <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+
         <SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
-        <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
-        <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
-        <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
-        <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
-        <GenerateTestArtifacts>True</GenerateTestArtifacts>
-        <AppxBundle>Never</AppxBundle>
-        <PackageCertificateThumbprint>B68A1F5785706052496DAF0F2E23310B945D5D2C</PackageCertificateThumbprint>
     </PropertyGroup>
 
     <ItemGroup>
@@ -40,6 +36,7 @@
         <PackageReference Include="WinUIEx" Version="2.6.0" />
         <PackageReference Include="YamlDotNet" Version="16.3.0" />
     </ItemGroup>
+
     <ItemGroup>
         <Content Include="..\FufuLauncher\Launcher.dll">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -66,14 +63,11 @@
     <ItemGroup>
         <ProjectReference Include="..\FufuLauncher.Core\FufuLauncher.Core.csproj" />
     </ItemGroup>
+
     <ItemGroup>
         <None Update="appsettings.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
-    </ItemGroup>
-    
-    <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
-        <ProjectCapability Include="Msix" />
     </ItemGroup>
 
     <ItemGroup>
@@ -81,14 +75,10 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Content Remove="Assets\BadgeLogo.scale-100.png" />
-      <Content Remove="Assets\BadgeLogo.scale-125.png" />
-      <Content Remove="Assets\BadgeLogo.scale-150.png" />
-      <Content Remove="Assets\BadgeLogo.scale-200.png" />
-      <Content Remove="Assets\BadgeLogo.scale-400.png" />
+        <Content Remove="Assets\BadgeLogo.scale-100.png" />
+        <Content Remove="Assets\BadgeLogo.scale-125.png" />
+        <Content Remove="Assets\BadgeLogo.scale-150.png" />
+        <Content Remove="Assets\BadgeLogo.scale-200.png" />
+        <Content Remove="Assets\BadgeLogo.scale-400.png" />
     </ItemGroup>
-
-    <PropertyGroup Condition="'$(DisableHasPackageAndPublishMenuAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
-        <HasPackageAndPublishMenu>true</HasPackageAndPublishMenu>
-    </PropertyGroup>
 </Project>
