--- a/FufuLauncher.Core/FufuLauncher.Core.csproj
+++ b/FufuLauncher.Core/FufuLauncher.Core.csproj
@@ -11,5 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="protobuf-net" Version="3.2.56" />
+    <PackageReference Include="ZstdSharp.Port" Version="0.8.6" />
   </ItemGroup>
 </Project>
