--- a/FufuLauncher/FufuLauncher.csproj
+++ b/FufuLauncher/FufuLauncher.csproj
@@ -59,6 +59,10 @@
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
             <Link>input_hot_switch.dll</Link>
         </Content>
+        <Content Include="..\FufuLauncher\CaptureApp.exe">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <Link>CaptureApp.exe</Link>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
