Install Visual C++ Build Tools 14 in workflow
Added step to install Visual C++ Build Tools 14 in the workflow.

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -75,6 +75,13 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
+    - name: Install Visual C++ Build Tools 14 (MSVC v143)
+      uses: microsoft/setup-msbuild@v2
+      with:
+        vs-version: 17.8
+        msbuild-architecture: x64
+        install-vc-build-tools: true
+    
     # Execute all unit tests in the solution
     - name: Execute unit tests
       run: dotnet test
