Update unit test command with additional parameters (Only C#)

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -84,7 +84,7 @@ jobs:
     
     # Execute all unit tests in the solution
     - name: Execute unit tests
-      run: dotnet test
+      run: dotnet test $env:Solution_Name --configuration Release --no-restore --filter "Extension!=vcxproj" --verbosity minimal
 
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
