Update artifact paths in GitHub Actions workflow

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -99,19 +99,20 @@ jobs:
 
     - name: Pack build artifacts to ZIP file
       run: |
-        $sourceDir = "FufuLauncher/bin/x64/Release/net8.0-windows10.0.26100/win-x64/*"
+        #万能路径匹配：匹配主目录下所有子目录的文件，不管编译产物在哪层都能找到
+        $sourceDir = "FufuLauncher/bin/x64/Release/**/*"
         $zipFileName = "FufuLauncher_Release.zip"
         Compress-Archive -Path $sourceDir -DestinationPath $zipFileName -Force
         Write-Host "Successfully created zip package: $zipFileName"
-        
+
     - name: Upload ZIP package artifact
       uses: actions/upload-artifact@v4
       with:
         name: FufuLauncher_Release_ZIP
         path: FufuLauncher_Release.zip
-        
+
     - name: Upload uncompressed build files
       uses: actions/upload-artifact@v4
       with:
         name: FufuLauncher_Release_Files
-        path: FufuLauncher/bin/x64/Release/net8.0-windows10.0.26100/win-x64/
+        path: FufuLauncher/bin/x64/Release/
