Remove ZIP packaging and upload from workflow
Removed ZIP packaging and upload steps for build artifacts.

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -97,21 +97,8 @@ jobs:
       env:
         Configuration: ${{ matrix.configuration }}
 
-    - name: Pack build artifacts to ZIP file
-      run: |
-        $sourceDir = "D:\a\FufuLauncher\FufuLauncher\FufuLauncher\bin\x64\Release\net8.0-windows10.0.26100.0"
-        $zipFileName = "FufuLauncher_Release.zip"
-        Compress-Archive -Path $sourceDir -DestinationPath $zipFileName -Force
-        Write-Host "Successfully created zip package: $zipFileName"
-
-    - name: Upload ZIP package artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: FufuLauncher_Release_ZIP
-        path: FufuLauncher_Release.zip
-
     - name: Upload uncompressed build files
       uses: actions/upload-artifact@v4
       with:
-        name: FufuLauncher_Release_Files
+        name: FufuLauncher_Release
         path: D:\a\FufuLauncher\FufuLauncher\FufuLauncher\bin\x64\Release\net8.0-windows10.0.26100.0
